JDK 17 support #71
(cherry picked from commit 77501f40238b765c2ec68e4ca9b6df89e8feb6b9)